// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDbWorker initializes correctly 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        176,
        184,
        97,
        218,
        198,
        34,
        195,
        43,
        62,
        39,
        189,
        137,
        148,
        170,
        87,
        108,
        226,
        12,
        196,
        233,
        204,
        222,
        233,
        31,
        126,
        1,
        165,
        170,
        15,
        208,
        115,
        18,
      ],
      "id": "Gm2rxDYibpjp9MLQYgnXO",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        223,
        255,
        201,
        168,
        127,
        27,
        26,
        188,
        250,
        180,
        237,
        65,
        254,
        6,
        128,
        233,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
]
`;

exports[`createDbWorker initializes correctly 2`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "testTable",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "_testTable",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              176,
              184,
              97,
              218,
              198,
              34,
              195,
              43,
              62,
              39,
              189,
              137,
              148,
              170,
              87,
              108,
              226,
              12,
              196,
              233,
              204,
              222,
              233,
              31,
              126,
              1,
              165,
              170,
              15,
              208,
              115,
              18,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "Gm2rxDYibpjp9MLQYgnXO",
          "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
          "appOwnerWriteKey": {
            "data": [
              223,
              255,
              201,
              168,
              127,
              27,
              26,
              188,
              250,
              180,
              237,
              65,
              254,
              6,
              128,
              233,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.000Z-0000-18ca52c3a8d0151b",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "testTable",
      "rows": [],
    },
    {
      "name": "_testTable",
      "rows": [],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`local mutation 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        176,
        184,
        97,
        218,
        198,
        34,
        195,
        43,
        62,
        39,
        189,
        137,
        148,
        170,
        87,
        108,
        226,
        12,
        196,
        233,
        204,
        222,
        233,
        31,
        126,
        1,
        165,
        170,
        15,
        208,
        115,
        18,
      ],
      "id": "Gm2rxDYibpjp9MLQYgnXO",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        223,
        255,
        201,
        168,
        127,
        27,
        26,
        188,
        250,
        180,
        237,
        65,
        254,
        6,
        128,
        233,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "wKG2sAKxc3jir3c4AAUWg",
    "type": "onChange",
  },
  {
    "tabId": "wKG2sAKxc3jir3c4AAUWg",
    "type": "onReceive",
  },
]
`;

exports[`local mutation 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            176,
            184,
            97,
            218,
            198,
            34,
            195,
            43,
            62,
            39,
            189,
            137,
            148,
            170,
            87,
            108,
            226,
            12,
            196,
            233,
            204,
            222,
            233,
            31,
            126,
            1,
            165,
            170,
            15,
            208,
            115,
            18,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "Gm2rxDYibpjp9MLQYgnXO",
        "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
        "appOwnerWriteKey": {
          "data": [
            223,
            255,
            201,
            168,
            127,
            27,
            26,
            188,
            250,
            180,
            237,
            65,
            254,
            6,
            128,
            233,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-3e2fe27d7cd5aa54",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.002Z",
        "id": "oimhRPBjgFeyTa9pE7z9K",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.002Z",
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`local mutation 3`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            176,
            184,
            97,
            218,
            198,
            34,
            195,
            43,
            62,
            39,
            189,
            137,
            148,
            170,
            87,
            108,
            226,
            12,
            196,
            233,
            204,
            222,
            233,
            31,
            126,
            1,
            165,
            170,
            15,
            208,
            115,
            18,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "Gm2rxDYibpjp9MLQYgnXO",
        "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
        "appOwnerWriteKey": {
          "data": [
            223,
            255,
            201,
            168,
            127,
            27,
            26,
            188,
            250,
            180,
            237,
            65,
            254,
            6,
            128,
            233,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-3e2fe27d7cd5aa54",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutate before init 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        176,
        184,
        97,
        218,
        198,
        34,
        195,
        43,
        62,
        39,
        189,
        137,
        148,
        170,
        87,
        108,
        226,
        12,
        196,
        233,
        204,
        222,
        233,
        31,
        126,
        1,
        165,
        170,
        15,
        208,
        115,
        18,
      ],
      "id": "Gm2rxDYibpjp9MLQYgnXO",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        223,
        255,
        201,
        168,
        127,
        27,
        26,
        188,
        250,
        180,
        237,
        65,
        254,
        6,
        128,
        233,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "vUIv7-7QDf11mF2BAPRJE",
    "type": "onChange",
  },
  {
    "tabId": "vUIv7-7QDf11mF2BAPRJE",
    "type": "onReceive",
  },
]
`;

exports[`mutate before init 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            176,
            184,
            97,
            218,
            198,
            34,
            195,
            43,
            62,
            39,
            189,
            137,
            148,
            170,
            87,
            108,
            226,
            12,
            196,
            233,
            204,
            222,
            233,
            31,
            126,
            1,
            165,
            170,
            15,
            208,
            115,
            18,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "Gm2rxDYibpjp9MLQYgnXO",
        "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
        "appOwnerWriteKey": {
          "data": [
            223,
            255,
            201,
            168,
            127,
            27,
            26,
            188,
            250,
            180,
            237,
            65,
            254,
            6,
            128,
            233,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-5f327a1041123f05",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.001Z",
        "id": "z1duDCZbms4ropUP_dGi2",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.001Z",
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutations 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        176,
        184,
        97,
        218,
        198,
        34,
        195,
        43,
        62,
        39,
        189,
        137,
        148,
        170,
        87,
        108,
        226,
        12,
        196,
        233,
        204,
        222,
        233,
        31,
        126,
        1,
        165,
        170,
        15,
        208,
        115,
        18,
      ],
      "id": "Gm2rxDYibpjp9MLQYgnXO",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        223,
        255,
        201,
        168,
        127,
        27,
        26,
        188,
        250,
        180,
        237,
        65,
        254,
        6,
        128,
        233,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "EkmGiGH5l37ns7tL4W_18",
    "type": "onChange",
  },
  {
    "tabId": "EkmGiGH5l37ns7tL4W_18",
    "type": "onReceive",
  },
]
`;

exports[`mutations 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            176,
            184,
            97,
            218,
            198,
            34,
            195,
            43,
            62,
            39,
            189,
            137,
            148,
            170,
            87,
            108,
            226,
            12,
            196,
            233,
            204,
            222,
            233,
            31,
            126,
            1,
            165,
            170,
            15,
            208,
            115,
            18,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "Gm2rxDYibpjp9MLQYgnXO",
        "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
        "appOwnerWriteKey": {
          "data": [
            223,
            255,
            201,
            168,
            127,
            27,
            26,
            188,
            250,
            180,
            237,
            65,
            254,
            6,
            128,
            233,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0001-93a717907b090ff5",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [
      {
        "column": "name",
        "id": {
          "data": [
            162,
            205,
            128,
            130,
            92,
            105,
            205,
            242,
            201,
            167,
            225,
            89,
            142,
            234,
            71,
            8,
          ],
          "type": "Buffer",
        },
        "ownerId": {
          "data": [
            26,
            109,
            171,
            196,
            54,
            34,
            110,
            152,
            233,
            244,
            194,
            208,
            98,
            9,
            215,
            56,
          ],
          "type": "Buffer",
        },
        "table": "testTable",
        "timestamp": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            147,
            167,
            23,
            144,
            123,
            9,
            15,
            245,
          ],
          "type": "Buffer",
        },
        "value": "test",
      },
    ],
  },
  {
    "name": "testTable",
    "rows": [
      {
        "createdAt": null,
        "id": "os2AglxpzfLJp-FZjupHC",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.000Z",
      },
    ],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_timestamp",
    "rows": [
      {
        "c": 1,
        "h1": 118277743410482,
        "h2": 180704582535927,
        "l": 2,
        "ownerId": {
          "data": [
            26,
            109,
            171,
            196,
            54,
            34,
            110,
            152,
            233,
            244,
            194,
            208,
            98,
            9,
            215,
            56,
          ],
          "type": "Buffer",
        },
        "t": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            147,
            167,
            23,
            144,
            123,
            9,
            15,
            245,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
]
`;

exports[`reset 1`] = `
{
  "schema": {
    "indexes": [],
    "tables": [],
  },
  "tables": [],
}
`;
